--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,6 @@ form {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+.navbar-toggler-icon {
+    background-color: #e6b103; /* Change this to your desired color */
+  }
